web: add ipinfo dislpay,serve: add ipblock api
